--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-12">
         <div class="footer">
-          <h3 class="footer-title">{{site.title}}</h3>
+          <h3 class="footer-title"><img src="{{site.baseurl}}/assets/images/pondasi-title.png" /></h3>
           <ul class="footer-menu">
             <li><a href="{{site.baseurl}}/">Halaman awal</a></li>
             <li><a href="{{site.baseurl}}/contact">Kontak</a></li>
