--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 <div class='header {{include.headerClass}}'>
   <div class="container">
     <div class="logo">
-      <a href="{{site.baseurl}}/"><img alt="Figurit Homepage" src="{{site.baseurl}}/assets/images/logo.ico" /></a>
+      <a href="{{site.baseurl}}/"><img alt="Figurit Homepage" src="{{site.baseurl}}/assets/images/pondasi-title.png" /></a>
     </div>
     <div class="logo-mobile">
-      <a href="{{site.baseurl}}/"><img alt="Figurit Homepage" src="{{site.baseurl}}/assets/images/logo.ico" /></a>
+      <a href="{{site.baseurl}}/"><img alt="Figurit Homepage" src="{{site.baseurl}}/assets/images/pondasi-title.png" /></a>
     </div>
     {% include main-menu.html %}
     {% include hamburger.html %}
