--- a/_includes/main-menu-mobile.html
+++ b/_includes/main-menu-mobile.html
@@ -2,7 +2,7 @@
   <ul>
     <li><a href="{{site.baseurl}}/" class="{% if page.url == '/' %}current{% endif %}">Halaman Utama</a></li>
     <li><a href="{{site.baseurl}}/team/" class="{% if page.url contains 'team' %}current{% endif %}">TIM</a></li>
-    <li><a href="{{site.baseurl}}/testimonials/" class="{% if page.url contains 'testimonials' %}current{% endif %}">Diskusi</a></li>
+    <li><a href="{{site.baseurl}}/diskusi/" class="{% if page.url contains 'testimonials' %}current{% endif %}">Diskusi</a></li>
     <li><a href="{{site.baseurl}}/contact/" class="{% if page.url contains 'contact' %}current{% endif %}">Kontak</a></li>
   </ul>
 </div>
