--- a/_includes/main-menu-mobile.html
+++ b/_includes/main-menu-mobile.html
@@ -1,7 +1,7 @@
 <div id="main-menu-mobile" class="main-menu-mobile">
   <ul>
     <li><a href="{{site.baseurl}}/" class="{% if page.url == '/' %}current{% endif %}">Halaman Utama</a></li>
-    <li><a href="{{site.baseurl}}/team/" class="{% if page.url contains 'team' %}current{% endif %}">TIM</a></li>
+    <li><a href="{{site.baseurl}}/jasa/" class="{% if page.url contains 'team' %}current{% endif %}">jasa</a></li>
     <li><a href="{{site.baseurl}}/diskusi/" class="{% if page.url contains 'testimonials' %}current{% endif %}">Diskusi</a></li>
     <li><a href="{{site.baseurl}}/kontak/" class="{% if page.url contains 'contact' %}current{% endif %}">Kontak</a></li>
   </ul>
