--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
           <h3 class="footer-title"><img src="{{site.baseurl}}/assets/images/pondasi-title.png" /></h3>
           <ul class="footer-menu">
             <li><a href="{{site.baseurl}}/">Halaman awal</a></li>
-            <li><a href="{{site.baseurl}}/contact">Kontak</a></li>
+            <li><a href="{{site.baseurl}}/kontak">Kontak</a></li>
             <li class="copyright">© {{site.title}} {{site.time | date:'%Y'}}</li>
           </ul>
         </div>
