--- a/_sass/pages/services/_page-services-list.scss
+++ b/_sass/pages/services/_page-services-list.scss
@@ -1,18 +1,18 @@
 .page-services-list {
-  background-image: url('../images/undraw_businesswoman_pc12.svg');
+  background-image: url('../images/kontak.svg');
   background-repeat: no-repeat;
-  background-size: 115%;
-  background-position: 49px -40px;
+  background-size: 100%;
+  background-position: 49px 40px;
   @include media-breakpoint-up(sm) {
     background-size: 90%;
-    background-position: 159px -40px;
+    background-position: 159px 40px;
   }
   @include media-breakpoint-up(md) {
     background-size: 85%;
-    background-position: 199px -80px;
+    background-position: 199px 80px;
   }
   @include media-breakpoint-up(lg) {
-    background-size: 60%;
-    background-position: 100% -110px;
+    background-size: 50%;
+    background-position: 100% 110px;
   }
 }
