--- a/_sass/pages/testimonials/_page-testimonials-list.scss
+++ b/_sass/pages/testimonials/_page-testimonials-list.scss
@@ -1,5 +1,5 @@
 .page-testimonials-list {
-  // background-image: url("../images/undraw_hang_out_h9ud.svg");
+  background-image: url("../images/projek.svg");
   background-repeat: no-repeat;
   background-size: 115%;
   background-position: 49px -40px;
